flex-wrap fix

--- a/src/GameLog.scss
+++ b/src/GameLog.scss
@@ -48,6 +48,7 @@
 
             list-style: none;
 
+            flex-wrap: wrap;
             @include flex(center, center);
 
             li {
